--- a/sass/_tabla.scss
+++ b/sass/_tabla.scss
@@ -23,6 +23,7 @@ th, tr, td{
     margin-top: 10px;
     padding: 10px;
     h2{
+        @extend .preguntasFrecuentes;
         padding: 10px;
     }
     p{
