--- a/sass/_productos.scss
+++ b/sass/_productos.scss
@@ -1,7 +1,39 @@
-.productoSoutein img:hover, .productoBombacha img:hover{
+.producto img:hover{
     opacity: 0.8;
 } 
 .detalle_producto{
-    font-size: 14px;
+    font-size: 20px;
     color: $negro;
+}
+.producto{
+    border-bottom: 1px solid $color7;
+    margin-bottom: 2rem;
+} 
+.precio{
+    text-decoration: line-through;
+    color: $color6;
+ }
+.precio_cuotas{
+    color: $color6;
+    font-weight: bold;
+    font-size: 18px;
+} 
+.precio_descuento{
+    color: $color5;
+    font-weight: bold;
+}
+.btn_producto{
+    color: $blanco;
+    text-align: center;
+    background: $color5;
+    border: none;
+    padding: 1rem 5rem;
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+    border-radius: 20px;
+}
+.btn_producto:hover{
+    background: $negro;
 }
