--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -3,7 +3,7 @@ $color2:#FFB8C3;
 $color3:#D9B1AF;
 $color4:#c6c6ce;
 $color5:#DE6262;
-$color6:#fff4f4;
+$color6:#919191;
 $color7:#f0ebe5;
 $blanco:#ffff;
 $negro: #000000;
