--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -4,6 +4,9 @@
     height: 100%;
     padding: 10px;
     margin-top: 20px;
+    .parrafo_footer{
+        text-align: center;
+    }
     &__menu{
         height: auto;
         display: flex;
@@ -18,6 +21,7 @@
         font-size: 18px;
         color: $blanco;
         text-decoration: none;
+        font-size: 20px;
     }
     &__link:hover{
         color: $negro;
@@ -69,18 +73,43 @@
         max-width: 100%;
     }
 }
-.iconos{
+ul#iconos {
+    width: 108px;
+    height: 72px;
+    margin: 5px auto;
+    padding: 5px 0 0 0;
+    display: flex;
+    flex-direction: row;
     justify-content: center;
-    &__texto{
-        margin-top: 10px;
-        text-align: center;
-        color: $blanco;
+    align-items: center;
     }
-}
-@each $iconos in iconoFace, iconoInst {
-    .#{$iconos}{
-        @include size (30px, 25px);
-        margin-bottom: 15px;
-        padding: 1px;
+ul#iconos li {
+    list-style: none;
+    float: left;
+    a{
+        width: 36px;
+        height: 36px;
+        background: url(../img/iconos/iconos.png) no-repeat;
+        transition: all 0.5s ease;
+        display: block;
+        }
     }
+#iconos li#facebook a{
+    background-position: 0 0;
 }
+#iconos li#instagram a {
+    background-position: -36px 0;
+}
+#iconos li#github a {
+    background-position: -72px 0;
+}
+#iconos li#facebook a:hover{
+    background-position: 0 -36px;
+}
+#iconos li#instagram a:hover {
+    background-position: -36px -36px;
+}
+#iconos li#github a:hover {
+    background-position: -72px -36px;
+}
+
