--- a/sass/_preguntas.scss
+++ b/sass/_preguntas.scss
@@ -23,9 +23,11 @@
 }
 .ico_envio{
     display: flex;
+
     justify-content: center;
+    width: 100%;
 }
 .ico_truck{
-    width: 400px;
+    width: 350px;
 }
 
