--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -67,10 +67,13 @@ header{
     max-width: 100%;
     padding: 10px;
     .nav-link{
-        font-size: 18px;
+        text-transform: uppercase;
+        font-size: 16px;
+        margin: 10px;
     }
     .nav-link:hover{
         color: $color5 !important;
+        font-weight: bold;
     }
 }
 /*------------------------------------------------------------------------*/
