--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -99,8 +99,8 @@ header{
     margin: 20px 0;
     h1{
         font-size: 20px;
-        background: $negro;
-        color:$blanco;
+        font-weight: bold;
+        color:$negro;
         height: 40px;
         padding: 10px;
     }
