--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* Globales */
+/* GLOBALES */
 * {
   box-sizing: border-box;
   margin: 0;
@@ -88,8 +88,8 @@ header {
   margin: 20px 0; }
   .tituloProductos h1 {
     font-size: 20px;
-    background: #000000;
-    color: #ffff;
+    font-weight: bold;
+    color: #000000;
     height: 40px;
     padding: 10px; }
 
@@ -153,6 +153,9 @@ header {
 .publicidad {
   margin-top: 25px; }
 
+/*------------------------------------------------------------------------*/
+/* PRODUCTOS*/
+
 .producto img:hover {
   opacity: 0.8; }
 
@@ -192,6 +195,9 @@ header {
 .btn_producto:hover {
   background: #000000; }
 
+/*------------------------------------------------------------------------*/
+/* TABLA DE TALLES */
+
 .tabla {
   margin-top: 50px;
   text-align: center; }
@@ -218,6 +224,9 @@ th, tr, td {
     padding: 10px; }
   .detalle_busto p, .detalle_bombacha p {
     text-align: justify; }
+
+/*------------------------------------------------------------------------*/
+/* PREGUNTAS */  
 
 .bloque {
   display: flex;
@@ -249,6 +258,9 @@ th, tr, td {
 
 .ico_truck {
   width: 350px; }
+
+/*------------------------------------------------------------------------*/
+/* CONTACTO */  
 
 .contacto_main {
   margin-top: 40px; }
@@ -339,6 +351,7 @@ label {
 .contacto_boton:hover {
   background: #E94E77; }
 
+/*------------------------------------------------------------------------*/  
 /* FOOTER */
 .pie {
   background-image: linear-gradient(#FFB8C3, #D9B1AF);
@@ -439,6 +452,9 @@ ul#iconos li {
 
 #iconos li#github a:hover {
   background-position: -72px -36px; }
+
+/*------------------------------------------------------------------------*/
+/* @MEDIA */ 
 
 @media (max-width: 768px) {
   header {
